Updated creating tasks.json if not exists.